# bf-gb

./: .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  README.md  SCRIPTS.md  SUMMARY.md  entrypoint.sh  project_demo.py  validate_structure.py
demo/: data-43.csv  data.csv  ly_data.csv  pyproject.toml
scripts/: run_demo.sh  run_full_pipeline.sh  start_training.sh  status.sh  stop_training.sh
src/: collector.rs  config.rs  generator.rs  gradient_boosting.rs  lib.rs  main.rs  redis_client.rs  trainer.rs
