[package]
name = "bf-gb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
ctrlc = "3.5.1"
duckdb = { version = "1.4.4", features = ["bundled"] }
itertools = "0.14.0"
linfa = "0.7.1"
linfa-trees = "0.7.1"
ndarray = "0.15.2"
polars = { version = "0.53.0", features = ["csv", "dtype-i8", "lazy"] }
rand = "0.8.0"
rand_chacha = "0.3.0"
redis = { version = "1.0.3", default-features = false, features = ["script"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
